--- a/.env.heroku
+++ b/.env.heroku
@@ -1,8 +1,63 @@
-# .env.heroku
-APP_KEY=B42YhYjFMkEYFynep3SPlRCpxwhjCHljs3uVxlP4/jQ=
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:OA2zZaQmjwuIMk6A6B0OMAB7x+13OuIz9JqROdqBtqo=
+#APP_KEY=base64:QrBA6q0+Nif71x9V7HeW5lU6ogpXR91ICliMWpc/rL8=
+APP_DEBUG=false
+APP_URL=https://first-task-65d928cebfd8.herokuapp.com/
+
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
 DB_CONNECTION=mysql
-DB_HOST=r4919aobtbi97j46.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-DB_PORT=3306
-DB_DATABASE=coj65b0jp3zcxjge
-DB_USERNAME=o7iczc1crtkgjuql
-DB_PASSWORD=l9m7e3vkptiflpm9
+DB_HOST=127.0.0.1
+DB_PORT=8889
+DB_DATABASE=first_task
+DB_USERNAME=laravel_user2
+DB_PASSWORD=1234
+
+BROADCAST_DRIVER=log
+#CACHE_DRIVER=file
+CACHE_DRIVER=redis
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+#SESSION_DRIVER=file
+#SESSION_DRIVER=database
+SESSION_DRIVER=redis
+SESSION_LIFETIME=120
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_CLIENT=predis
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
