--- a/.env.heroku
+++ b/.env.heroku
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:OA2zZaQmjwuIMk6A6B0OMAB7x+13OuIz9JqROdqBtqo=
 #APP_KEY=base64:QrBA6q0+Nif71x9V7HeW5lU6ogpXR91ICliMWpc/rL8=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://first-task-65d928cebfd8.herokuapp.com/
 
 LOG_CHANNEL=stack
