--- a/.env.heroku
+++ b/.env.heroku
@@ -1,7 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:OA2zZaQmjwuIMk6A6B0OMAB7x+13OuIz9JqROdqBtqo=
-#APP_KEY=base64:QrBA6q0+Nif71x9V7HeW5lU6ogpXR91ICliMWpc/rL8=
+APP_ENV=localb
+APP_KEY=base64:Wu6EoTJAQcuo0uVV5qPnov/0fBmMF+CNznXjtiA/DHQ=
 APP_DEBUG=true
 APP_URL=https://first-task-65d928cebfd8.herokuapp.com/
 
