--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Wu6EoTJAQcuo0uVV5qPnov/0fBmMF+CNznXjtiA/DHQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,20 +10,24 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=8889
+DB_DATABASE=first_task
+DB_USERNAME=laravel_user2
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+#CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+#SESSION_DRIVER=database
+#SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
