--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+        "compile": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
         "heroku-postbuild": "npm install && npm run prod"
     },
     "extra": {
